--- a/webpack/public/index.html
+++ b/webpack/public/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="estilo.css">
 </head>
 <body>
+    <button class="botao">Teste</button>
     <script src="pricipal.js"></script>
 </body>
 </html>
